--- a/historia.html
+++ b/historia.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Club Historia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> menu de navegación comun a todas la paginas</header> 
     
-    <main>información que queremos</main>
-
+<header>Historial de la Sociedad Deportiva Amorebieta</header> 
+    
+  
 
 
 
