subir  rama devZu a github

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     reiciendis assumenda ullam quidem debitis aspernatur neque fugit sed suscipit incidunt, 
                     inventore rerum commodi? Dolore voluptas aperiam hic alias magnam consectetur qui illum 
                     quo dignissimos laborum aliquam ratione est soluta, quod sint quas aut magni optio culpa. 
-                    Ducimus, corporis?</p>
+                    Ducimus, corporissss?</p>
             </div>
 
             <div class="about__flex__item">
