--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="menuBar__flexBox flex">
         <div> <a href="">Equipos </a> </div>
-        <div> <a href="">Club</a> </div>
+        <div> <a href="historia.html">Club</a> </div>
         <div> <a href="">Noticias </a> </div> 
         <div> <a href="">Tienda </a> </div>
       </div> 
