añadiendo referencia a tienda

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                     <div> <a href="">Equipos </a> </div>
                     <div> <a href="historia.html">Club</a> </div>
                     <div> <a href="">Noticias </a> </div> 
-                    <div> <a href="">Tienda </a> </div>
+                    <div> <a href="tienda.html">Tienda </a> </div>
                 </nav> 
             </div>
         </header> 
