--- a/historia.html
+++ b/historia.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Estoy intentando tener conflictos y que GIT nos pregunte-->
 <header>Historial de la Sociedad Deportiva Amorebieta</header> 
-
+<!--Estoy intentando tener conflictos y que GIT nos pregunte-->
 <div>
-
+<!--Estoy intentando tener conflictos y que GIT nos pregunte-->
 
     
 </div>
