h1 unico + crear noticias + estructura tienda

--- a/noticias.html
+++ b/noticias.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda</title>
+    <title>Noticias</title>
     <link rel="stylesheet" href="homeStyle.css">
-</head>
 
+</head>
 <body>
     <div class="gridd">
 
@@ -27,6 +26,15 @@
         </header> 
     <!-------------BODY -----------------> 
         <main>
+            <section>
+                <h2>ENTRENAMIENTO</h2>
+            </section>
+            <section>
+                <h2>EQUIPACIONES</h2>
+            </section>
+            <section>
+             <h2>COMPLEMENTOS</h2>
+            </section>
             
         </main>
     <!-------------FOOTER -----------------> 
@@ -58,5 +66,4 @@
 
     </div>
 </body>
-
 </html>
