--- a/historia.html
+++ b/historia.html
@@ -11,15 +11,16 @@
     <!-- Header -->
     <div class="header">
       <header>Historial de la Sociedad Deportiva Amorebieta</header>
-    </div>
+  
    
     <br><br>
 
     <div class="amorobieta">
-       <div  class="amorbi"> <img src="./img/amorobieta-1.jpeg" alt="img"></div><br><br><br>
+       <div  class="amorbi"> <img src="./img/amorobieta-1.jpeg" alt="img"></div><br><br><br>/
+   
 
         <div class="amorobieta-1">
-            <p>DATOS GENERALES:</p><br>
+            <h3>DATOS GENERALES:</h3><br>
             <ul>
 
                 <li><strong> Nombre completo:</strong> Sociedad Deportiva Amorebieta
@@ -37,7 +38,7 @@
 
         <div class="trofeos">
         
-            <p>Trofeos:</p>
+            <h3>Trofeos:</h3>
             <p>1 Liga de <strong> Tercera División:</strong></p>
             <ul>
                 <li>2010/11</li>
@@ -53,7 +54,7 @@
             </ul>
         </div><br><br>
         <div class="estadio-img">
-     <h2>Imagenes del Estadio:</h2><br>
+     <h3>Imagenes del Estadio:</h3><br>
      </div>
      <div class="estadio-imgen">
      
@@ -63,12 +64,12 @@
      <img src="./img/amorobieta-5.jpg" alt="img">
     </div>
     <br><br>
-    <p>Historia de la liga</p><br><br>
+    <h3>Historia de la liga</h3><br><br>
     <a href="./img/Trayectoria-SD-Amorebieta-2021.jpg"><img src="./img/Trayectoria-SD-Amorebieta-2021.jpg" alt=""></a>
 <div class="historia">
 <h2>HISTORIA DEL CLUB INICIADO:</h2>
 <br>
-<p>1925 - 1930</p><br>
+<h3>1925 - 1930</h3><br>
 <p>Sin un colectivo titular del Campo de Urritxe durante unos meses y una población próxima a los cinco mil habitantes con muchos aficionados al fútbol, fruto del acuerdo de voluntades de un grupo de ellos el 4 de enero de 1925 que deseaban hacer borrón y cuenta nueva con lo recientemente ocurrido, quedó constituida la Sociedad Deportiva Amorebieta teniendo como primer presidente electo a Antonio de Gorostiaga y vistiendo como sus antecesores camiseta y pantalón azules. Habida cuenta de su gran interés en formar parte del fútbol organizado para poder competir a nivel oficial, la Junta Directiva estimó de inmediato ingresar en la Federación Vizcaína siendo emplazado por su nivel deportivo y reciente fundación en la Serie C Ordinaria, la última categoría en aquellos momentos donde debutó en la temporada 25/26 pasando en el campeonato siguiente a la Serie C Preferente.
 <br><br>
     Humilde desde su fundación entre tantos buenos clubs en su más próximo entorno, la sociedad zornotzarra no sobrepasó la Tercera Categoría durante los últimos años veinte, limitándose a competir dignamente y a distraer cada fin de semana a sus incondicionales quienes, en buen número, acudían cada fin de semana a ver a su equipo luchar frente a clubs de Bilbao principalmente y de las comarcas vizcaínas adyacentes.</p>
