modificando los iconos de redes sociales y background

--- a/home.html
+++ b/home.html
@@ -94,12 +94,16 @@
 
     <!-------------FOOTER -----------------> 
         <footer id= "footer" class="gridd__item  flex_colum">
+
+            <h2>Síguenos en nuestras Redes Sociales</h2>
             <div class="foot__redes">
                 <div class="foot__redes__flexBox flex_row">
-                    <a href="https://www.linkedin.com/"><img class= "ico" src="./img/linkedin-social.png" alt="linkedin"></a>
-                    <a href="https://www.facebook.com/"><img class= "ico" src="./img/facebook-social.png" alt="facebook"></a>
-                    <a href="https://www.instagram.com/"><img class= "ico" src="./img/instagram-social (1).png" alt="instagram"></a>
-
+                    <a href="https://www.linkedin.com/"><img class= "ico" src="./img/linkedin.svg" alt="linkedin"></a>
+                    <a href="https://www.facebook.com/"><img class= "ico" src="./img/facebook.svg" alt="facebook"></a>
+                    <a href="https://www.instagram.com/"><img class= "ico" src="./img/instagram.svg" alt="instagram"></a>
+                    <a href="https://www.twitter.com/"><img class= "ico" src="./img/twitter.svg" alt="twitter"></a>
+                    <a href="https://www.youtube.com/"><img class= "ico" src="./img/youtube.svg" alt="youtube"></a>
+                    <a href="https://www.tiktok.com/"><img class= "ico" src="./img/tiktok.svg" alt="tiktok"></a>
                 </div>
         
             </div>
