importando actualidad css

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                 <nav class="flex_row">
                     <div> <a href="equipo.html">Equipos </a> </div>
                     <div> <a href="historia.html">Club</a> </div>
-                    <div> <a href="noticias.html">Noticias </a> </div> 
+                    <div> <a href="actualidad.html">Noticias </a> </div> 
                     <div> <a href="tienda.html">Tienda </a> </div>
                 </nav> 
             </div>
