--- a/historia.html
+++ b/historia.html
@@ -25,7 +25,8 @@
                     alt="img"></div><br><br><br>
 
             <div class="amorobieta-1">
-                <h3 style="color: rgb(0, 0, 0);"> DATOS GENERALES:</h3><br>
+                <h3> DATOS GENERALES:</h3><br>
+                
                 <ul>
 
                     <li><strong> Nombre completo:</strong><span>Sociedad Deportiva Amorebieta</span>
@@ -41,8 +42,9 @@
                 </ul>
                 <br>
             </div>
+            </div>
         </div>
-    </div>
+    
     <div class="trofeos">
 
         <h3>Trofeos:</h3>
@@ -67,7 +69,7 @@
     <div class="estadio-img">
         <h2>Imagenes del Estadio:</h2><br>
         <div class="estadio-imagen"> <img src="./img/amorobieta-2.jpeg" alt="img">
-            <img src="./img/amorobieta-3.jpeg" alt="img">
+          <img src="./img/amorobieta-3.jpeg" alt="img">
             <img src="./img/amorobieta-4.jpeg" alt="img">
             <img src="./img/amorobieta-5.jpg" alt="img">
             <img src="./img/Slider_tienda_Equipaciones.jpg" alt="img">
