--- a/historia.html
+++ b/historia.html
@@ -79,7 +79,7 @@
     <br><br>
     </div>
     <div class="liga">
-        <h3>Historia de la liga</h3><br><br>
+        <h3>Trayectoria-SD-Amorebieta-2021</h3><br><br>
     </div>
     <div class="liga-1"><a href="./img/Trayectoria-SD-Amorebieta-2021.jpg"><img
                 src="./img/Trayectoria-SD-Amorebieta-2021.jpg" alt=""></a></div>
