--- a/actualidad.html
+++ b/actualidad.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actualidad Deportivas SDA</title>
     <link rel="stylesheet" href="actualidad.css">
+    <link rel="stylesheet" href="homeStyle.css">
+
 </head>
     <header>
 
