--- a/equipo.html
+++ b/equipo.html
@@ -28,10 +28,10 @@
             </div>
         </header>
 
-    </header>
-    
-    <h1>EQUIPOS Y CATEGORIAS</h1>
-
+    </header>    
+        <div class="h1--equipos">
+            <h1>EQUIPOS Y CATEGORIAS</h1>
+        </div>
     <div class="fotosCategorias">
        
 
