--- a/noticias1.html
+++ b/noticias1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actualidad Deportivas SDA</title>
     <link rel="stylesheet" href="actualidad.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="homeStyle.css">
 </head>
 <header class="gridd_home_item" id="header">
