--- a/actualidad.html
+++ b/actualidad.html
@@ -13,10 +13,18 @@
 <body>
     <main>
     <h1>Actualidad</h1>
+    <div id="hidegreen">
+		<div id="slider">
+			<div><img src="./img/actualidad01.jpg" alt="Partido de futbol"><p>El Eibar golea a un Amorebieta de construcccion</p></div>
+			<div><img src="./img/actualidad02.jpg" alt="Estatua de jugador futbol"><p>Etxeita vuelve a casa: ficha por el Amorebieta</p> </div>
+			<div><img src="./img/actualidad03.jpg" alt="Balon de futbol"></div>
+  		
+		</div>
+	</div>
     <div>
-        <h2>El Eibar golea a un Amorebieta de construcccion</h2>
-        <img src="./img/actualidad01.jpg" alt="Partido de futbol">
-<p>El Eibar gano de goleada 5-2  a un Amorebieta  cansado en su cuata temporada Bastitc y Artetxe y Yanis realizaron los goles de eradasta tempo</p>
+        <div>
+            
+        </div>
     </div>
     </main>
     <footer>
