--- a/noticias2.html
+++ b/noticias2.html
@@ -27,15 +27,15 @@
 <body>
     <main>
         <section class="noticias_section">
-        <h2>El Eibar golea a un Amorebieta de construcccion</h2>
+        <h2>Etxeita vuelve a casa: ficha por el Amorebieta</h2>
         
             <div >
-                <img src="./img/actualidad01.jpg" alt="partido de futbol" class="noticias_imagen">
+                <img src="../img/actualidad02.jpg" alt="estatua de jugador de futbol" class="noticias_imagen">
             </div>
         <div class="noticias_article">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;El Eibar gano de goleada 5-2  a un Amorebieta  cansado en su cuata temporada Bastitc y Artetxe y Yanis realizaron los goles de esta  temporada</p> <br>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;Garitano reservó a muchos de sus titulares para la cita de mañana en Tafalla ante el Huesca, pero aun así el Eibar fue claramente superior a un Amorebieta que sufrió para frenar las acometidas armeras. Bautista, con un potente disparo cruzado, y Aketxe tras un pase de Yanis dentro del área, pusieron tierra de por medio antes de que se cumpliera la media hora y la distancia pudo ser mayor si Troncho hubiese aprovechado las dos ocasiones claras que dispuso en el inicio del partido y que detuvo Marino con mucho mérito.</p><br>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp; Uno de lo jugadores termino el partido con una lesion en los isquiotibiales parece que es grave y va a tener que perderse un par de partidos.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;El Amorebieta, líder del Grupo II de Primera RFEF, confirmó el fichaje de Xabi Etxeita, exjugador de Athletic, Huesca y Getafe en Primera División y una vez internacional absoluto con la selección española. Etxeita, de 34 años, regresa así al club de su localidad y desde el que dio el salto al Athletic en 2006 para incorporarse al filial rojiblanco.</p> <br>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Con el primer equipo bilbaíno disputó 140 partidos oficiales a lo largo de siete temporadas repartidas en dos etapas y en su palmarés figura la Supercopa de 2015. El 5 de octubre de ese mismo año debutó y jugó su único partido con España frente a Ucrania en Kiev, en un encuentro de clasificación para la Eurocopa 2016.</p><br>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; La pasada temporada jugó el Segunda División con el Eibar, con el que disputó 21 partidos oficiales y marcó un gol. En el segundo peldaño del fútbol español también ha formado parte del Cartagena y el Elche. El Amorebieta se está resituando tras el sueño de jugar en Segunda la campaña pasada, cuando reclutó a otro jugador con mucho recorrido en el Athletic: San José. Este ha decidido colgar las botas por las molestias físicas.</p>
             </p> 
         </div>   
         </section>
