--- a/equipo.html
+++ b/equipo.html
@@ -30,7 +30,7 @@
 
     </header>    
         <div class="h1--equipos">
-            <h1>EQUIPOS Y CATEGORIAS</h1>
+            <h1>CATEGORIAS/PARTIDOS</h1>
         </div>
     <div class="fotosCategorias">
        
