--- a/noticias3.html
+++ b/noticias3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Eibar golea a un Amorebieta de construcccion</title>
+    <title>Unzueta endulza el adiós del Amorebieta a la categoría</title>
     <link rel="stylesheet" href="actualidad.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="homeStyle.css">
@@ -26,16 +26,17 @@
 </header>
 <body>
     <main>
+      
         <section class="noticias_section">
-        <h3 class="noticias_h3">El Eibar golea a un Amorebieta de construcccion</h3>
+        <h3 class="noticias_h3">Unzueta endulza el adiós del Amorebieta a la categoría</h3>
         
-            <div >
-                <img src="./img/actualidad01.jpg" alt="partido de futbol" class="noticias_imagen">
+            <div>
+                <img src="./img/actualidad03.jpg" alt="grada del campo de futbol " class="noticias_imagen">
             </div>
         <div class="noticias_article">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;El Eibar gano de goleada 5-2  a un Amorebieta  cansado en su cuata temporada Bastitc y Artetxe y Yanis realizaron los goles de esta  temporada</p> <br>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;Garitano reservó a muchos de sus titulares para la cita de mañana en Tafalla ante el Huesca, pero aun así el Eibar fue claramente superior a un Amorebieta que sufrió para frenar las acometidas armeras. Bautista, con un potente disparo cruzado, y Aketxe tras un pase de Yanis dentro del área, pusieron tierra de por medio antes de que se cumpliera la media hora y la distancia pudo ser mayor si Troncho hubiese aprovechado las dos ocasiones claras que dispuso en el inicio del partido y que detuvo Marino con mucho mérito.</p><br>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp; Uno de lo jugadores termino el partido con una lesion en los isquiotibiales parece que es grave y va a tener que perderse un par de partidos.</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Alegría en Lezama para despedir la temporada. El Amorebieta se despidió de Segunda división encadenando su quinta victoria consecutiva delante de su afición gracias al postrero gol de Iker Unzueta, que no sirve en lo clasificatorio salvo para superar a la Real B pero que deja un mejor sabor de boca a los azules, ante una Ponferradina que dice adiós al curso con su tercera derrota seguida y que no pudo brindar un triunfo a su técnico Jon Pérez Bolo en su último partido al frente del equipo berciano</p> <br>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Fue una tarde de despedidas en Lezama para miembros de uno y otro equipo, en los prolegómenos del partido se realizó un homenaje a Mikel Saizar, Mikel Álvaro y Aimar Sagastibeltza, tres de las piezas clave de los azules en los últimos años que disputaron hoy su último partido. También última tarde para Jon Pérez Bolo como técnico de la Ponfe.</p><br>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; Empezó mejor el Amorebieta que dispuso de varias ocasiones en los primeros minutos de juego por mediación de Orozko, al que incluso llegaron a anular un gol por posición antirreglamentaria. El ariete fue muy protagonista y buscó el gol con ahínco, pero sin suerte en esos primeros minutos. La más clara para los bercianos la protagonizó Agus Medina con una gran intervención de Saizar para mantener el empate.</p>
             </p> 
         </div>   
         </section>
