un pequeño arreglo

--- a/actualidad.html
+++ b/actualidad.html
@@ -60,7 +60,7 @@
             <li class="slide_li">
                 <img src="./img/actualidad01.jpg" alt="Partido de futbol">
                 <div class="text_slider">
-                <p>El Eibar golea a un Amorebieta de construcccion</p><br>
+                <p>El Eibar golea a un Amorebieta de construcción</p><br>
                 <a href="noticias1.html"  target="_blank" class="noticias_link" >Leer mas >></a>
                 
                 </div>
