empezamos responsive todos juntos

--- a/equipo.html
+++ b/equipo.html
@@ -33,7 +33,7 @@
     <section>
 
             <div class="h1--equipos">
-                <h1>CATEGORIAS/PARTIDOS</h1>
+                <h1 class="h1--equipos">CATEGORIAS/PARTIDOS</h1>
             </div>
         <div class="fotosCategorias">
 
