--- a/tienda.html
+++ b/tienda.html
@@ -32,31 +32,85 @@
     <main>
         <section>
             <h2>ENTRENAMIENTO</h2>
-            <div>
-                <img src="img\bermudaBolsillo.png" alt="Bidón" width="370" height="444">
-                <img src="img\camiEntrena.png" alt="Bidón" width="370" height="444">
-                <img src="img\Chaqueta.png" alt="Bidón" width="370" height="444">
-                <img src="img\pantalon.png" alt="Bidón" width="370" height="444">
-                <img src="img\polo.png" alt="Bidón" width="370" height="444">
-                <img src="img\sudadera.png" alt="Bidón" width="370" height="444">
+            <div class="flex_row">
+                <div class="gridd_home_item noticias_contenedor_text">                    
+                    <img src="img\bermudaBolsillo.png" alt="Bermuda con bolsillo" width="300" height="400">
+                    <p >Bermuda con bolsillo</p>
+                        <p class="precio">30,00 €</p>
+                </div>
+                <div class="gridd_home_item noticias_contenedor_text">                    
+                    <img src="img\camiEntrena.png" alt="Camiseta entrenamiento" width="300" height="400">
+                    <p >Camiseta de entrenamiento</p>
+                        <p class="precio">33,00 €</p>
+                </div>
+                <div class="gridd_home_item noticias_contenedor_text">
+                    <img src="img\Chaqueta.png" alt="Chaqueta chandal" width="300" height="400">
+                    <p >Chaqueta chandal</p>
+                        <p class="precio">53,00 €</p>
+                </div>
+                <div class="gridd_home_item noticias_contenedor_text">                    
+                    <img src="img\pantalon.png" alt="Bidón" width="300" height="400">
+                    <p >Pantalon chandal paseo</p>
+                        <p class="precio">53,00 €</p>
+                </div>
+                <div class="gridd_home_item noticias_contenedor_text">
+                    <img src="img\polo.png" alt="Polo" width="300" height="400">
+                    <p >Polo</p>
+                        <p class="precio">53,00 €</p>
+                </div>
+                <div class="gridd_home_item noticias_contenedor_text">
+                    <img src="img\sudadera.png" alt="Bidón" width="300" height="400">
+                    <p >Sudadera entrenamiento</p>
+                        <p class="precio">53,00 €</p>
+                </div>
+                
             </div>
         </section>
         <section>
             <h2>EQUIPACIONES</h2>
-            <div>
-                <img src="img\primeraEqui.png" alt="Bidón" width="370" height="444">
-                <img src="img\segundaEqui.png" alt="Bidón" width="370" height="444">
+            <div class="flex_row">
+                <div class="gridd_home_item noticias_contenedor_text">
+                    <img src="img\primeraEqui.png" alt="Camiseta Primera Equipacion" width="300" height="400">
+                    <p >Camiseta Primera Equipacion</p>
+                        <p class="precio">63,00 €</p>
+                </div>
+                <div class="gridd_home_item noticias_contenedor_text">
+                    <img src="img\segundaEqui.png" alt="Camiseta Primera Equipacion" width="300" height="400">
+                    <p >Camiseta Primera Equipacion </p>
+                        <p class="precio">63,00 €</p>
+                </div>
             </div>
         </section>
         <section>
          <h2>COMPLEMENTOS</h2>
-         <div>
-            <img src="img\bidonAgua.png" alt="Bidón" width="370" height="444">
-            <img src="img\bufanda.png" alt="Bufanda" width="370" height="444">
-            <img src="img\llavero.png" alt="Llavero" width="370" height="444">
-            <img src="img\paraguas.png" alt="Paraguas" width="370" height="444">
-            <img src="img\taza.png" alt="Taza" width="370" height="444">
-            <img src="img\zapa.png" alt="Zapatillas" width="370" height="444">            
+         <div  class="flex_row">
+            <div class="gridd_home_item noticias_contenedor_text">
+                <img src="img\bidonAgua.png" alt="Bidón" width="300" height="400">
+                <p >Bidón Agua</p>
+                    <p class="precio">11,00 €</p>
+            </div> 
+            <div class="gridd_home_item noticias_contenedor_text">
+                <img src="img\bufanda.png" alt="Bufanda" width="300" height="400">
+                <p >Bufandas</p>
+                    <p class="precio">18,00 €</p>
+            </div> 
+            <div class="gridd_home_item noticias_contenedor_text">
+                <img src="img\llavero.png" alt="Llavero" width="300" height="400">
+                <p >Llavero</p>
+                    <p class="precio">8,00 €</p>
+            </div> <div class="gridd_home_item noticias_contenedor_text">
+                <img src="img\paraguas.png" alt="Paraguas" width="300" height="400">
+                <p >Paraguas</p>
+                    <p class="precio">18,00 €</p>
+            </div> <div class="gridd_home_item noticias_contenedor_text">                
+                <img src="img\taza.png" alt="Taza" width="300" height="400">
+                <p >Taza</p>
+                    <p class="precio">13,00 €</p>
+            </div> <div class="gridd_home_item noticias_contenedor_text">
+                <img src="img\zapa.png" alt="Zapatillas" width="300" height="400">            
+                <p >Zapatillas De Casa</p>
+                    <p class="precio">23,00 €</p>
+            </div>
          </div>
         </section>
         
