--- a/home.html
+++ b/home.html
@@ -639,9 +639,9 @@
                 <div id="copyRight"> &copy; Amorebieta 2022</div>
 
                 <div class="flex_row">
-                    <div> <a href="">Política de Privacidad </a> </div>
-                    <div> <a href="">Política de Cookies</a> </div>
-                    <div> <a href="">Aviso Legal </a> </div>
+                    <div> <a href="404.html">Política de Privacidad </a> </div>
+                    <div> <a href="404.html">Política de Cookies</a> </div>
+                    <div> <a href="404.html">Aviso Legal </a> </div>
                 </div>
 
             </div>
