responsivo pc pequeña, table y 640px

--- a/home.html
+++ b/home.html
@@ -638,7 +638,7 @@
             <div class="foot__legal">
                 <div id="copyRight"> &copy; Amorebieta 2022</div>
 
-                <div class="flex_row">
+                <div class=" politicas flex_row">
                     <div> <a href="">Política de Privacidad </a> </div>
                     <div> <a href="">Política de Cookies</a> </div>
                     <div> <a href="">Aviso Legal </a> </div>
