--- a/actualidad.html
+++ b/actualidad.html
@@ -76,7 +76,7 @@
     <div class="noticias_contenedor">
         <article>
              <div>
-            <h2>Adiós Amorebieta, adiós a un sueño de 364 días</h2>
+            <h2>Adiós Amorebieta, adiós a un sueño de 364 días <br></h2>
             <img class="contenedor_img" src="./img/acutalidad04.jpg" alt="Grada">
             </div>
             <div>
