--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SDAmorefoot</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="homeStyle.css">
+    <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
 
 </head>
 <body class="body_home">
