--- a/equipo.html
+++ b/equipo.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="homeStyle.css" />
-
+        <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
         <title>EQUIPOS</title>
 
     </head>
