--- a/historia.html
+++ b/historia.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Club Historia</title>
     <link rel="stylesheet" href="homeStyle.css" />
+    <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
 </head>
 
 <body>
