menu responsivo arreglado en todas las paginas

--- a/equipo.html
+++ b/equipo.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="homeStyle.css" />
         <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
         <title>EQUIPOS</title>
         <script src="home.js"></script>
 
