--- a/tienda.html
+++ b/tienda.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link rel="stylesheet" href="homeStyle.css">
     <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <script src="home.js"></script>
 
 </head>
