--- a/tienda.html
+++ b/tienda.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="homeStyle.css">
     <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
     <script src="home.js"></script>
+    
 
 </head>
 
@@ -62,7 +63,7 @@
                         <p class="precio">53,00 €</p>
                 </div>
                 <div class="gridd_home_item noticias_contenedor_text">                    
-                    <img src="img\pantalon.png" alt="Bidón" width="300" height="400">
+                    <img src="img\pantalon.png" alt="Pantalón" width="300" height="400">
                     <p >Pantalon chandal paseo</p>
                         <p class="precio">53,00 €</p>
                 </div>
@@ -72,7 +73,7 @@
                         <p class="precio">53,00 €</p>
                 </div>
                 <div class="gridd_home_item noticias_contenedor_text">
-                    <img src="img\sudadera.png" alt="Bidón" width="300" height="400">
+                    <img src="img\sudadera.png" alt="Sudadera" width="300" height="400">
                     <p >Sudadera entrenamiento</p>
                         <p class="precio">53,00 €</p>
                 </div>
@@ -88,7 +89,7 @@
                         <p class="precio">63,00 €</p>
                 </div>
                 <div class="gridd_home_item noticias_contenedor_text">
-                    <img src="img\segundaEqui.png" alt="Camiseta Primera Equipacion" width="300" height="400">
+                    <img src="img\segundaEqui.png" alt="Camiseta Segunda Equipacion" width="300" height="400">
                     <p >Camiseta Primera Equipacion </p>
                         <p class="precio">63,00 €</p>
                 </div>
@@ -109,7 +110,7 @@
             </div> 
             <div class="gridd_home_item noticias_contenedor_text">
                 <img src="img\llavero.png" alt="Llavero" width="300" height="400">
-                <p >Llavero</p>
+                <p >Llavero  <button onclick="myFunction()">Click me</button> </p>
                     <p class="precio">8,00 €</p>
             </div> <div class="gridd_home_item noticias_contenedor_text">
                 <img src="img\paraguas.png" alt="Paraguas" width="300" height="400">
