--- a/equipo.html
+++ b/equipo.html
@@ -11,6 +11,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
         <title>EQUIPOS</title>
         <script src="home.js"></script>
+        <script src="https://kit.fontawesome.com/8c655d3807.js" crossorigin="anonymous"></script>
+
 
 
     </head>
@@ -124,12 +126,10 @@
         <div class="foot__redes">
             <h2 class="h2_home h2_home--small">síguenos en nuestras redes sociales</h2>
             <div class="foot_redes_ico flex_row">
-                <a href="https://www.linkedin.com/"><img class= "ico" src="./img/linkedin.svg" alt="linkedin"></a>
-                <a href="https://www.facebook.com/"><img class= "ico" src="./img/facebook.svg" alt="facebook"></a>
-                <a href="https://www.instagram.com/"><img class= "ico" src="./img/instagram.svg" alt="instagram"></a>
-                <a href="https://www.twitter.com/"><img class= "ico" src="./img/twitter.svg" alt="twitter"></a>
-                <a href="https://www.youtube.com/"><img class= "ico" src="./img/youtube.svg" alt="youtube"></a>
-                <a href="https://www.tiktok.com/"><img class= "ico" src="./img/tiktok.svg" alt="tiktok"></a>
+                <a href="https://www.facebook.com/sdamorebieta"><i class="fa-brands fa-facebook ico"></i></a>
+                <a href="https://twitter.com/SDAmorebieta"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.youtube.com/@sdamorebieta7233"><i class="fa-brands fa-youtube "></i></a>
+                <a href="https://www.instagram.com/sdamorebieta/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
 
