--- a/equipo.html
+++ b/equipo.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="La Cantera de SD AmoreFoot, todos los equipos">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="homeStyle.css" />
         <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
