--- a/noticias1.html
+++ b/noticias1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Noticias de hoy: El Eibar golea a un Amorebieta de construcccion">
     <title>El Eibar golea a un Amorebieta de construcccion</title>
     
     <link rel="stylesheet" href="normalize.css">
