--- a/actualidad.html
+++ b/actualidad.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Todas actualidad de SD AmoreFoot las noticias del momennto">
     <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
     <title>Actualidad Deportivas SDA</title>
 
