--- a/historia.html
+++ b/historia.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Toda la historia de SD AmoreFoot desde nuestros comienzos">
     <title>Club Historia</title>
     <link rel="stylesheet" href="homeStyle.css" />
     <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
