--- a/noticias5.html
+++ b/noticias5.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Noticias de hoy: A la espera de un milagro">
+    
     <title>A la espera de un milagro</title>
     <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
     <link rel="stylesheet" href="normalize.css">
