--- a/noticias7.html
+++ b/noticias7.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Noticias de hoy: El sueño del Amorebieta esta a punto de acabarse">
+
     <title>El sueño del Amorebieta esta a punto de acabarse</title>
     <link rel="shortcut icon" href="./img/logo-sdamorebieta.ico" type="image/x-icon">
     <link rel="stylesheet" href="normalize.css">
