correccion del body

--- a/actualidad.html
+++ b/actualidad.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +19,8 @@
     
     
 </head>
+<body class="body_home">
+    <div class="gridd_home">
 <header class="gridd_home_item header2">
     <div class="flex_row" id="menu">
         <div class="flex_row logo_etiqueta">
@@ -43,7 +45,7 @@
         </nav>
     </div>
 </header>
-<body>
+
     <main>
     <h2 class="actualidad_h2" id="actualidad">Actualidad</h2>
     <div class="noticias_slider">
