Lipio para subir a la master

--- a/tienda.html
+++ b/tienda.html
@@ -146,7 +146,8 @@
          </div>
         </section>
         <section>
-            <p>Importe </p> <p id="total"></p> 
+            <p>Importe </p> 
+            <p id="total"></p> 
         </section>
         
     </main>
