--- a/tienda.html
+++ b/tienda.html
@@ -141,7 +141,7 @@
                 <img src="img\zapa.png" alt="Zapatillas" width="300" height="400">            
                 <p >Zapatillas De Casa</p>
                     <p class="precio">23,00 €</p>
-                    <button onclick="pedirProducto('Zapatillas')">Añadir al carrito</button>
+                    <button onclick="pedirProducto('Zapatillas')">Añadir al carrito</button> <!--addEventlistener en JS-->
             </div>
          </div>
         </section>
